--- a/HTML/2.1 Heading Element/solution.html
+++ b/HTML/2.1 Heading Element/solution.html
@@ -1,7 +1,9 @@
 <!-- Scroll 👇 to check the solution -->
 
-<h1>Book</h1> <!-- Always have only one h1 in the document-->
-<h2>Chapter 1</h2> <!-- Dont skip any level while adding heading levels -->
+<h1>Book</h1>
+<!-- Always have only one h1 in the document-->
+<h2>Chapter 1</h2>
+<!-- Dont skip any level while adding heading levels -->
 <h3>Section 1</h3>
 <h3>Section 2</h3>
 <h2>Chapter 2</h2>
