--- a/jQuery/index.html
+++ b/jQuery/index.html
@@ -28,6 +28,10 @@
       <button>Click Me !</button>
       <button>Click Me !</button>
     </section>
+    <section>
+      <input type="text" style="margin-left: 300px; margin-top: 30px" />
+    </section>
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="script.js"></script>
   </body>
